<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_12"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/flProfileStatus"
            android:layout_marginBottom="@dimen/keyline_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.media2359.nickel.ui.customview.CustomTextView
                android:id="@+id/tvProfileStatus"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:text="@string/profile_status_pending"
                android:gravity="center"
                android:padding="@dimen/keyline_16"
                android:drawableLeft="@drawable/ico_alert"
                android:background="@color/home_background"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />

        </FrameLayout>

        <com.media2359.nickel.ui.customview.ProfileField
            android:id="@+id/pfReciDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="name"
            app:ivLeftImageRes="@drawable/ico_name"
            app:tvHint="@string/display_name" />

        <com.media2359.nickel.ui.customview.ProfileField
            android:id="@+id/pfReciName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="name"
            app:ivLeftImageRes="@drawable/ico_name"
            app:tvHint="@string/full_name" />

        <com.media2359.nickel.ui.customview.ProfileField
            android:id="@+id/pfReciPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="phone"
            app:ivLeftImageRes="@drawable/ico_phone"
            app:tvHint="@string/phone_number" />

        <com.media2359.nickel.ui.customview.ProfileField
            android:id="@+id/pfReciStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="text"
            app:ivLeftImageRes="@drawable/ico_address1"
            app:tvHint="@string/street_address" />

        <com.media2359.nickel.ui.customview.ProfileField
            android:id="@+id/pfReciCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="text"
            app:ivLeftImageRes="@drawable/ico_address2"
            app:tvHint="@string/city" />

        <com.media2359.nickel.ui.customview.ProfileField
            android:id="@+id/pfReciPostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="number"
            app:ivLeftImageRes="@drawable/ico_address3"
            app:tvHint="@string/postal_code" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/ivFieldLeft"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/keyline_16"
                android:background="@android:color/transparent"
                android:src="@drawable/ico_bank" />

            <com.media2359.nickel.ui.customview.CustomTextView
                android:text="@string/bank_name"
                android:layout_alignLeft="@+id/spinnerBankName"
                android:paddingLeft="4dp"
                android:textColor="@color/pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinnerBankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/ivFieldLeft"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="@dimen/font_size_large" />

        </RelativeLayout>

        <com.media2359.nickel.ui.customview.ProfileField
            android:id="@+id/pfReciBankAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="number"
            app:ivLeftImageRes="@drawable/ico_bank"
            app:tvHint="@string/bank_account" />

        <com.media2359.nickel.ui.customview.ProfileField
            android:id="@+id/pfReciBankAccountConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inputType="number"
            app:ivLeftImageRes="@drawable/ico_bank"
            app:tvHint="@string/confirm_bank_account" />

        <Button
            android:id="@+id/btnSaveChanges"
            style="@style/PinkButton"
            android:layout_below="@id/rlIDPhotoContainer"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/keyline_16"
            android:layout_marginTop="@dimen/keyline_16"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/save_changes"
            android:textAllCaps="false" />


    </LinearLayout>
</ScrollView>

