<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/round_corner_square"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/keyline_16">

    <com.media2359.nickel.ui.customview.CustomTextView
        android:id="@+id/tvResetPassword"
        android:layout_marginTop="@dimen/keyline_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/reset_password_text" />

    <com.media2359.nickel.ui.customview.PhoneNumberEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ico_sm_phone_black"
        android:drawablePadding="@dimen/keyline_16"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/keyline_12"
        android:layout_below="@+id/tvResetPassword"
        android:background="@color/home_background"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <com.media2359.nickel.ui.customview.CustomEditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ico_sm_language_black"
        android:drawablePadding="@dimen/keyline_16"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/keyline_12"
        android:layout_below="@+id/etPhoneNumber"
        android:background="@color/home_background"
        android:hint="One Time Password"
        android:inputType="numberDecimal" />

    <com.media2359.nickel.ui.customview.CustomEditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ico_sm_password_black"
        android:drawablePadding="@dimen/keyline_16"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/keyline_12"
        android:layout_below="@+id/etOTP"
        android:background="@color/home_background"
        android:hint="@string/new_password"
        android:inputType="text" />


    <com.media2359.nickel.ui.customview.CustomTextView
        android:id="@+id/btnResetPassword"
        android:padding="12dp"
        android:layout_below="@+id/etNewPassword"
        android:text="@string/submit"
        android:textColor="@color/pink"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.media2359.nickel.ui.customview.CustomTextView
        android:id="@+id/btnCancelReset"
        android:padding="12dp"
        android:layout_below="@+id/etNewPassword"
        android:text="@string/cancel"
        android:textColor="@color/text_color_normal"
        android:layout_toLeftOf="@+id/btnResetPassword"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>