<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/login_vertical_margin"
    android:paddingRight="@dimen/login_vertical_margin"
    android:background="@drawable/splash_bg">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/rlLoginContainer"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_big" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlLoginContainer"
        android:layout_alignRight="@+id/rlLoginContainer"
        android:text="@string/need_account"
        style="@style/TextButton"/>

    <RelativeLayout
        android:id="@+id/rlLoginContainer"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:scaleType="centerInside"
            android:layout_alignTop="@+id/etPhone"
            android:layout_alignBottom="@+id/etPhone"
            android:src="@drawable/ico_sm_phone"/>

        <EditText
            android:id="@+id/etPhone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_marginLeft="15dp"
            android:theme="@style/LoginField"
            android:layout_toRightOf="@+id/ivPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ivPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPhone"
            android:layout_alignLeft="@+id/ivPhone"
            android:scaleType="centerInside"
            android:layout_alignTop="@+id/etPassword"
            android:layout_alignBottom="@+id/etPassword"
            android:src="@drawable/ico_sm_password"/>

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:layout_below="@+id/etPhone"
            android:theme="@style/LoginField"
            android:layout_alignLeft="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ivPasswordAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPassword"
            android:visibility="gone"
            android:layout_alignLeft="@+id/ivPhone"
            android:scaleType="centerInside"
            android:layout_alignTop="@+id/etPasswordAgain"
            android:layout_alignBottom="@+id/etPasswordAgain"
            android:src="@drawable/ico_sm_password"/>

        <EditText
            android:id="@+id/etPasswordAgain"
            android:visibility="gone"
            android:hint="@string/re_enter_password"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:layout_below="@+id/etPassword"
            android:theme="@style/LoginField"
            android:layout_alignLeft="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlLoginContainer"
        android:layout_alignRight="@+id/rlLoginContainer"
        android:text="@string/forgot_password"
        style="@style/TextButton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_above="@+id/btnLogin"
        android:layout_marginBottom="@dimen/keyline_16"
        android:textSize="@dimen/font_size_body"
        android:text="@string/privacy_message_1"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        style="@style/PinkButton" />
</RelativeLayout>