<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/keyline_16">

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_12"
            android:text="Please submit receipt when internet is available."
            android:textSize="@dimen/font_size_body" />

        <com.media2359.nickel.ui.customview.TransactionProgress
            android:id="@+id/progressDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/keyline_12"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="@dimen/keyline_12" />

        <View
            android:id="@+id/divider_barcode"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <include
            android:id="@+id/rlTransNumbers"
            layout="@layout/include_transaction_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvInstruction"
            android:layout_marginTop="@dimen/keyline_12" />

        <LinearLayout
            android:id="@+id/llPaymentOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPaymentOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_12"
                android:layout_marginBottom="@dimen/keyline_12"
                android:text="@string/payment_options"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnPaymentUOB"
                style="@style/CardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_12"
                android:drawableLeft="@drawable/ico_bank"
                android:text="@string/UOB_machines" />

            <Button
                android:id="@+id/btnPaymentCStore"
                style="@style/CardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_12"
                android:drawableLeft="@drawable/ico_bank"
                android:text="@string/pay_by_CStore" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlReceiptUpload"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvReceipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/keyline_12"
                android:text="@string/receipt"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivReceipt"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_below="@+id/tvReceipt"
                android:layout_marginRight="@dimen/keyline_16"
                android:layout_toLeftOf="@+id/centerAnchor"
                android:src="@drawable/id_missing_back" />

            <View
                android:id="@+id/centerAnchor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/btnSubmitReceipt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/keyline_16"
                android:layout_toRightOf="@+id/centerAnchor"
                android:background="@drawable/button_card"
                android:text="Submit" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tvPaymentStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPaymentCStore"
            android:layout_marginTop="@dimen/keyline_16"
            android:gravity="center"
            android:text="Funds will be available by 10AM on \n Monday December 7th"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>
